# Mapigator

./: Cargo.toml  README.md  TODO.md  documentation.md
src/: analysis.rs  benchmark.rs  file.rs  graph.rs  main.rs  nominatim.rs  overpass.rs
src/graph/: builder.rs  edge.rs  mod.rs  oriented_graph.rs  utils.rs  vertex.rs
src/math/graph/: graph_impl.rs  graph_struct.rs
src/math/graph_old/: graph_impl.rs  mod.rs
src/tests/: utils.rs
src/utils/: graphs.md  utils.rs
