[package]
name = "roads"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
indicatif = { version = "0.18.3", features = ["rayon"] }
rayon = "1.10"
thiserror = "1.0"